--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -23,7 +23,7 @@
       </p>
       <p class="control">
         <a class="button clipboard" data-clipboard-target="#mail-input">
-          <img src="../img/clippy.svg" alt="Copy to clipboard">
+          <img src="../img/copy.png" alt="Copy to clipboard">
         </a>
       </p>
     </div>
