add options page entry from popup.html

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1 class="subtitle">乾坤大挪移</h1>
+
   <img class="loading" src="../img/loading.svg" alt="">
   <div class="container hidden">
     <div class="field has-addons">
@@ -26,6 +27,10 @@
           <img src="../img/copy.png" alt="Copy to clipboard">
         </a>
       </p>
+
+      <span class="icon settings has-text-info">
+        <img src="../img/settings.svg" alt="Copy to clipboard">
+      </span>
     </div>
 
     <article class="message">
