add feedback check

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -28,6 +28,9 @@
           保存
         </a>
       </p>
+      <p class="control hidden feedback">
+        <img src="../img/ok.gif" alt="">
+      </p>
     </div>
   </div>
 </body>
