--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
+  <script src="https://use.fontawesome.com/3319b650e4.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
       </p>
       <p class="control">
         <a class="button clipboard" data-clipboard-target="#mail-input">
-          <img src="../img/copy.png" alt="Copy to clipboard">
+          <i class="fa fa-clipboard" aria-hidden="true"></i>
         </a>
       </p>
 
