--- a/src/options/options.html
+++ b/src/options/options.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
-  <script src="https://use.fontawesome.com/3319b650e4.js"></script>
 </head>
 
 <body>
@@ -18,7 +17,7 @@
         <input class="file-input" type="file" name="resume">
         <span class="file-cta">
           <span class="file-icon">
-            <i class="fa fa-upload"></i>
+            <i class="iconfont icon-upload" aria-hidden="true"></i>
           </span>
           <span class="file-label">
             上传文件
