refactor options.html app.ts and import rxjs for read file

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -20,7 +20,7 @@
             <i class="iconfont icon-upload" aria-hidden="true"></i>
           </span>
           <span class="file-label">
-            上传文件
+            上传文件'
           </span>
         </span>
       </label>
