replace png to iconfont

--- a/src/css/iconfont/demo_fontclass.html
+++ b/src/css/iconfont/demo_fontclass.html
@@ -19,6 +19,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-settings"></i>
+                    <div class="name">settings_profile</div>
+                    <div class="fontclass">.icon-settings</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-upload"></i>
                     <div class="name">cloud upload</div>
                     <div class="fontclass">.icon-upload</div>
