--- a/src/css/iconfont/demo_symbol.html
+++ b/src/css/iconfont/demo_symbol.html
@@ -37,6 +37,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-settings"></use>
+                    </svg>
+                    <div class="name">settings_profile</div>
+                    <div class="fontclass">#icon-settings</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-upload"></use>
                     </svg>
                     <div class="name">cloud upload</div>
