--- a/src/css/iconfont/demo_unicode.html
+++ b/src/css/iconfont/demo_unicode.html
@@ -39,6 +39,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe618;</i>
+                    <div class="name">settings_profile</div>
+                    <div class="code">&amp;#xe618;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe604;</i>
                     <div class="name">cloud upload</div>
                     <div class="code">&amp;#xe604;</div>
