--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -29,7 +29,7 @@
       </p>
 
       <span class="icon settings has-text-info">
-        <img src="../img/settings.svg" alt="Copy to clipboard">
+        <i class="iconfont icon-settings" aria-hidden="true"></i>
       </span>
     </div>
 
